feat: release initial version

--- a/config.toml
+++ b/config.toml
@@ -4,11 +4,11 @@
     min = "0.110.0"
     max = ""
   [[module.mounts]]
-    source = 'layouts'
-    target = 'layouts'
-  [[module.mounts]]
     source = 'assets'
     target = 'assets'
   [[module.mounts]]
-    source = 'static'
-    target = 'static'
+    source = 'i18n'
+    target = 'i18n'
+  [[module.mounts]]
+    source = 'layouts'
+    target = 'layouts'
