--- a/exampleSite/hugo.toml
+++ b/exampleSite/hugo.toml
@@ -1,15 +1,15 @@
 baseURL = 'http://example.org/'
 languageCode = 'en-us'
-title = 'Test site for mod-template'
+title = 'Test site for mod-cookieyes'
+
+[params.modules.cookieyes]
+  force = true
+  id = 'dummy'
 
 [module]
-  # Build and serve using local mod-template clone declared in the named Hugo workspace:
-  workspace = "mod-template.work"
+  # Build and serve using local mod-cookieyes clone declared in the named Hugo workspace:
+  workspace = "mod-cookieyes.work"
   [[module.imports]]
-    path = "github.com/gethinode/mod-template"
-  [[module.imports.mounts]]
-    source = "dist"
-    target = "static"
-  [[module.imports.mounts]]
-    source = "layouts"
-    target = "layouts"
+    path = "github.com/gethinode/mod-cookieyes"
+  [[module.imports]]
+    path = "github.com/gethinode/mod-utils/v2"
