--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@gethinode/mod-cookieyes",
   "version": "1.0.1",
-  "description": "A template to define a Hugo module compatible with Hinode",
+  "description": "A Hugo module to integrate CookieYes with your Hinode site",
   "keywords": [
     "hugo",
     "module"
