--- a/exampleSite/hugo.toml
+++ b/exampleSite/hugo.toml
@@ -3,7 +3,7 @@ languageCode = 'en-us'
 title = 'Test site for mod-cookieyes'
 
 [params.modules.cookieyes]
-  force = true
+  local = true
   id = 'dummy'
 
 [module]
