feat: add dark mode support to audit table

--- a/config.toml
+++ b/config.toml
@@ -4,6 +4,9 @@
     min = "0.110.0"
     max = ""
   [[module.mounts]]
+    source = 'assets'
+    target = 'assets'
+  [[module.mounts]]
     source = 'i18n'
     target = 'i18n'
   [[module.mounts]]
